--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "backend-learn",
   "version": "1.0.0",
   "description": "learning backend building project",
+  "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon src/index.js"
   },
   "keywords": [
     "javascript",
@@ -13,5 +14,8 @@
     "coffee"
   ],
   "author": "Prerna Saxena",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "nodemon": "^3.1.10"
+  }
 }
